--- a/Practica1/Makefile
+++ b/Practica1/Makefile
@@ -22,7 +22,7 @@ else
 endif
 
 
-OBJECTS=$(patsubst %.c,%.o,$(wildcard *.c))
+#OBJECTS=$(patsubst %.c,%.o,$(wildcard *.c))
 
 all: $(OBJ)
 	$(CC) -o $(TARGET) $(OBJ_OUT) $(LIB_COMPILED)
